# Briefly-deployment

./: main.py  pyproject.toml  requirements.txt  supabase_schema.sql  sync-deploy.sh  vercel.json
api/: index.py
rss-frontend/: vercel.json
rss-frontend/public/: index.html  manifest.json
rss-frontend/src/: App.css  App.js  api.js  index.css
rss-frontend/src/components/HomePage/: HomePage.css  HomePage.jsx
rss-frontend/src/components/LandingPage/: LandingPage.css  LandingPage.jsx
rss-frontend/src/components/ManageFeeds/: ManageFeeds.css  ManageFeeds.jsx
rss-frontend/src/components/UsageMetrics/: UsageMetrics.css  UsageMetrics.jsx
