[project]
name = "feedsummarizer"
version = "0.1.0"
description = "RSS Feed Summarizer Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "supabase>=2.4.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "pydantic>=2.6.0"
]
